@@ -2378,3 +2378,4 @@
 #define NAME_yref (&builtin_names[2377])
 #define NAME_yrefVar (&builtin_names[2378])
 #define NAME_zoom (&builtin_names[2379])
+#define NAME_noTempFile (&builtin_names[2380])
